tests/invalid/global_variables/use_before_declaration.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    return foo;
}

foo: i64 = 3;